# os2020repo

./: readme.md
CreatorReporterProgram/: CMakeLists.txt  main.cpp
CreatorReporterProgram/Creation/: Creator.cpp  Creator.h
CreatorReporterProgram/IO Classes/: FilePrinter.cpp  FilePrinter.h  InputClass.cpp  InputClass.h
CreatorReporterProgram/Include/: Employee.h
CreatorReporterProgram/Process Maintaince/: ProcessMaintainer.cpp  ProcessMaintainer.h  RunnableProgram.cpp  RunnableProgram.h
CreatorReporterProgram/Reporting/: Reporter.cpp  Reporter.h  SalaryCounter.cpp  SalaryCounter.h
Lab1Project/: Lab1Project.sln
Lab1Project/Lab1Project/: Lab1Project.vcxproj  Lab1Project.vcxproj.filters  ProcessA.cpp
Lab2Project/: Lab2Project.sln
Lab2Project/Lab2Project/: Employee.h  FilePrinter.cpp  FilePrinter.h  InputParamClass.cpp  InputParamClass.h  Lab2Project.vcxproj  Lab2Project.vcxproj.filters  MainProgram.cpp  ProcessMaintainer.cpp  ProcessMaintainer.h  report.txt
NamedPipes/: NamedPipes.sln
NamedPipes/Client/: Client.cpp  Client.h  Client.vcxproj  Client.vcxproj.filters  ClientMain.cpp  ClientPipe.cpp  ClientPipe.h  EmployeeData.cpp  EmployeeData.h
NamedPipes/Server/: CriticalSection.cpp  CriticalSection.h  File.cpp  File.h  Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters  ServerMain.cpp  ServerNames.h  SimplePipe.cpp  SimplePipe.h  SimpleProcess.cpp  SimpleProcess.h
Receiver/: Receiver.sln
Receiver/Receiver/: File.cpp  File.h  InputProvider.cpp  InputProvider.h  (+6 more)
ThreadSynchronization/: ThreadSynchronization.sln
Threads/: Threads.sln
(+27 files in other folders)
